Bio UI: Desktop other projects spacing fixed.

--- a/app/scss/modules/_icons.scss
+++ b/app/scss/modules/_icons.scss
@@ -41,6 +41,7 @@
 
 		@include desktop {
 			height: 13px;
+			right: 1px;
 		}
 	}
 
